--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@farcaster/auth-client": "^0.3.0",
     "@farcaster/frame-node": "^0.0.13",
     "@farcaster/frame-sdk": "^0.0.26",
+    "@farcaster/miniapp-sdk": "^0.1.7",
     "@frames.js/debugger": "^0.5.0",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.64.2",
